--- a/index.html
+++ b/index.html
@@ -33,20 +33,22 @@
       50%{transform:scale(1.05);filter:drop-shadow(0 0 20px rgba(255,122,0,.55))}
       100%{transform:scale(1);filter:drop-shadow(0 0 0 rgba(255,122,0,0))}
     }
+    /* transkrypcja ciut niżej (kropla widoczna) */
     #transcript{position:fixed;left:16px;right:16px;
-      bottom:calc(96px + max(16px, env(safe-area-inset-bottom)));
+      bottom:calc(72px + max(16px, env(safe-area-inset-bottom)));
       z-index:40;padding:14px 16px;min-height:48px;color:var(--fg);font-size:16px;
       background:var(--glass-bg);border:1px solid var(--glass-bd);border-radius:16px;backdrop-filter:blur(8px)}
     .ff-bottom{position:fixed;left:16px;right:16px;bottom:max(16px,env(safe-area-inset-bottom));
       display:flex;gap:14px;z-index:30}
     .tile{flex:1;height:72px;border-radius:18px;display:flex;align-items:center;justify-content:center;gap:10px;
-      background:var(--glass-bg);border:1px solid var(--glass-bd);backdrop-filter:blur(10px);font-weight:700}
-    .tile.active{background:rgba(20,28,38,.46);outline:2px solid rgba(64,171,255,.55)}
+      background:var(--glass-bg);border:1px solid var(--glass-bd);backdrop-filter:blur(10px);font-weight:700;color:#fff}
+    .tile.active{background:rgba(20,28,38,.46);outline:2px solid rgba(64,171,255,.55);color:#fff}
     .summary{margin:6px 16px 20px;padding:16px;background:var(--glass-bg);
       border:1px solid var(--glass-bd);border-radius:16px;backdrop-filter:blur(8px)}
     .summary h2{margin:0 0 12px;font-size:18px}
     .summary ul{list-style:none;padding:0;margin:0}
     .summary li{margin:6px 0;font-size:15px;display:flex;align-items:center;gap:8px}
+    .hint{margin:4px 16px 0;color:#cbd6e6;font-size:13px;opacity:.9}
   </style>
 </head>
 <body>
@@ -64,22 +66,22 @@
     <h1>Złóż zamówienie</h1>
     <p class="lead">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</p>
     <section class="ff-hero">
-      <!-- logo bez obwódki -->
       <img id="ffLogo" class="logo" src="assets/Freeflowlogo.png" alt="FreeFlow logo"/>
     </section>
+    <p class="hint" id="sttHint" style="display:none;">🎤 Rozpoznawanie mowy nie jest wspierane w tej przeglądarce.</p>
   </main>
 
-  <!-- Transkrypcja (stałe miejsce nad kafelkami) -->
-  <div id="transcript">Powiedz, co chcesz zamówić…</div>
+  <!-- Transkrypcja (tu pokazujemy to, co słyszymy) -->
+  <div id="transcript">Słucham…</div>
 
-  <!-- Kafelki na dole, każdy osobno (glass) -->
+  <!-- Kafelki na dole -->
   <nav class="ff-bottom">
     <button id="btn-food" class="tile active">🍽️ Jedzenie</button>
     <button id="btn-taxi" class="tile">🚕 Taxi</button>
     <button id="btn-hotel" class="tile">🏡 Hotel</button>
   </nav>
 
-  <!-- Podsumowanie (pojawia się po wyborze) -->
+  <!-- Podsumowanie (po wyborze) -->
   <div class="summary" id="summaryBox" style="display:none;">
     <h2>Podsumowanie zamówienia</h2>
     <ul id="summaryList"></ul>
@@ -91,8 +93,89 @@
     const $t = document.getElementById('transcript');
     const $sumBox = document.getElementById('summaryBox');
     const $sumList = document.getElementById('summaryList');
+    const $hint = document.getElementById('sttHint');
 
-    // ====== pomocnicze ======
+    // ====== STT (webkitSpeechRecognition) ======
+    let recognition = null;
+    let isListening = false;
+
+    function sttSupported(){
+      return ('webkitSpeechRecognition' in window) || ('SpeechRecognition' in window);
+    }
+
+    function initSTT(){
+      if(recognition) return;
+      const Ctor = window.webkitSpeechRecognition || window.SpeechRecognition;
+      if(!Ctor){ $hint.style.display='block'; return; }
+
+      recognition = new Ctor();
+      recognition.lang = 'pl-PL';
+      recognition.continuous = true;        // stream
+      recognition.interimResults = true;     // pokazuj „na żywo”
+
+      let finalTranscript = '';
+
+      recognition.onstart = () => {
+        isListening = true;
+        $logo.classList.add('listening');
+        finalTranscript = '';
+        setTranscript('Słucham…');
+      };
+
+      recognition.onresult = (e) => {
+        let interim = '';
+        for (let i = e.resultIndex; i < e.results.length; i++) {
+          const res = e.results[i];
+          if (res.isFinal) finalTranscript += res[0].transcript + ' ';
+          else interim += res[0].transcript;
+        }
+        setTranscript((finalTranscript + interim).trim());
+      };
+
+      recognition.onerror = (e) => {
+        console.warn('STT error:', e.error);
+        setTranscript('Błąd rozpoznawania mowy.');
+        stopSTT();
+      };
+
+      recognition.onend = () => {
+        isListening = false;
+        $logo.classList.remove('listening');
+        if (!finalTranscript.trim()) setTranscript('Powiedz, co chcesz zamówić…');
+      };
+    }
+
+    function startSTT(){
+      if(!recognition){ initSTT(); }
+      if(recognition){
+        try{ recognition.start(); }catch(_){}
+      }
+    }
+    function stopSTT(){
+      if(recognition){
+        try{ recognition.stop(); }catch(_){}
+      }
+    }
+
+    // ====== TTS (Web Speech API) ======
+    function speak(text){
+      try{
+        if(!("speechSynthesis" in window)) return;
+        window.speechSynthesis.cancel();
+        const u = new SpeechSynthesisUtterance(text);
+        u.lang = "pl-PL"; u.rate=1; u.pitch=1; u.volume=1;
+        const assignThenSpeak = () => {
+          const voices = speechSynthesis.getVoices() || [];
+          const pl = voices.find(v => v.lang?.toLowerCase().startsWith('pl'));
+          if(pl) u.voice = pl;
+          speechSynthesis.speak(u);
+        };
+        if (speechSynthesis.getVoices().length) assignThenSpeak();
+        else speechSynthesis.onvoiceschanged = assignThenSpeak;
+      }catch(e){ console.warn("TTS error:", e); }
+    }
+
+    // ====== helpers ======
     function setTranscript(txt){ $t.textContent = txt; }
 
     function addSummary(items){
@@ -103,51 +186,12 @@
         $sumList.appendChild(li);
       });
       $sumBox.style.display = "block";
-
-      // zbuduj zwięzły tekst do TTS
       const plain = items.map(i => i.text).join(". ");
       speak(`Podsumowanie: ${plain}.`);
     }
 
-    // ====== TTS (Web Speech API) ======
-    function speak(text){
-      try{
-        if(!("speechSynthesis" in window)){
-          // brak wsparcia – pokaż tylko tekst
-          return;
-        }
-        // przerwij poprzednie czytanie, jeżeli trwa
-        window.speechSynthesis.cancel();
-
-        const u = new SpeechSynthesisUtterance(text);
-        // PL głos (fallback na default)
-        u.lang = "pl-PL";
-        u.rate = 1.0;   // prędkość
-        u.pitch = 1.0;  // ton
-        u.volume = 1.0; // głośność
-
-        // spróbuj dobrać polski głos, jeśli dostępny
-        const pickVoice = () => {
-          const voices = window.speechSynthesis.getVoices() || [];
-          const pl = voices.find(v => v.lang?.toLowerCase().startsWith("pl"));
-          if(pl) u.voice = pl;
-          window.speechSynthesis.speak(u);
-        };
-        // na części przeglądarek lista głosów ładuje się asynchronicznie
-        if (speechSynthesis.getVoices().length) {
-          pickVoice();
-        } else {
-          speechSynthesis.onvoiceschanged = pickVoice;
-        }
-      }catch(e){
-        // cicho ignoruj – TTS jest dodatkiem
-        console.warn("TTS error:", e);
-      }
-    }
-
-    // ====== demo akcji kafelków ======
+    // ====== akcje kafelków ======
     document.getElementById('btn-food').onclick = () => {
-      setTranscript("Zamawiam jedzenie…");
       addSummary([
         {icon:"✅",text:"Status: gotowe"},
         {icon:"🍕",text:"Capricciosa"},
@@ -156,9 +200,7 @@
         {icon:"💲",text:"Cena: 38 zł"}
       ]);
     };
-
     document.getElementById('btn-taxi').onclick = () => {
-      setTranscript("Zamawiam taksówkę…");
       addSummary([
         {icon:"✅",text:"Status: gotowe"},
         {icon:"🚕",text:"Taxi zamówione"},
@@ -166,9 +208,7 @@
         {icon:"⏱",text:"Czas podjazdu: około 5 minut"}
       ]);
     };
-
     document.getElementById('btn-hotel').onclick = () => {
-      setTranscript("Rezerwuję hotel…");
       addSummary([
         {icon:"✅",text:"Status: gotowe"},
         {icon:"🏡",text:"Hotel Demo"},
@@ -177,14 +217,19 @@
       ]);
     };
 
-    // ====== klik logo → efekt nasłuchu (wizualny) ======
-    let listening = false;
+    // ====== klik logo: start/stop STT + puls ======
     $logo.onclick = () => {
-      listening = !listening;
-      $logo.classList.toggle("listening", listening);
-      setTranscript(listening ? "Słucham…" : "Powiedz, co chcesz zamówić…");
-      // (Tu później podepniemy realny STT)
+      if(!sttSupported()){
+        $hint.style.display='block';
+        $logo.classList.toggle('listening');
+        return;
+      }
+      if(isListening) stopSTT();
+      else startSTT();
     };
+
+    // pokaż informację, jeśli STT niedostępne
+    if(!sttSupported()) $hint.style.display='block';
   </script>
 </body>
 </html>
