--- a/index.html
+++ b/index.html
@@ -24,25 +24,38 @@
   h1{margin:6px 16px 6px;font-size:34px}
   .lead{margin:0 16px 2px;color:#c9d3e3}
 
-  /* Logo wyżej */
-  .hero{display:grid;place-items:center;margin:0 0 4px}
-  .logo-wrap{width:min(84vw,520px);aspect-ratio:1/1}
-  .logo-wrap object,.logo-wrap svg{width:100%;height:100%;display:block}
+  /* HERO – większe logo, bez ucięć */
+  .hero{display:grid;place-items:center;margin:4px 0 0}
+  .logo-wrap{
+    width:min(92vw,600px);
+    max-height:52vh;                /* kontrola wysokości */
+    aspect-ratio:1/1;
+  }
+  .logo-wrap object{width:100%;height:100%;display:block}
 
-  /* Transkrypcja wyżej (tuż nad kafelkami) */
+  /* MIC FAB */
+  .mic-fab{
+    position:fixed; right:18px; bottom:calc(126px + env(safe-area-inset-bottom));
+    width:56px;height:56px;border-radius:50%;
+    display:grid;place-items:center;font-size:24px;cursor:pointer;z-index:50;
+    background:var(--glass-bg);border:1px solid var(--glass-bd);backdrop-filter:blur(10px);
+  }
+  @keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.08)}100%{transform:scale(1)}}
+  .mic-fab.on{animation:pulse 1.1s ease-in-out infinite;box-shadow:0 0 22px rgba(255,122,0,.55)}
+
+  /* TRANSKRYPCJA wyżej */
   #transcript{
     position:fixed;left:16px;right:16px;
-    bottom:calc(108px + max(16px, env(safe-area-inset-bottom))); /* było 72px – teraz wyżej */
+    bottom:calc(120px + max(16px, env(safe-area-inset-bottom)));
     z-index:40;padding:14px 16px;min-height:48px;font-size:16px;
     background:var(--glass-bg);border:1px solid var(--glass-bd);border-radius:16px;backdrop-filter:blur(8px)
   }
 
-  /* Kafelki */
+  /* Kafelki na dole – pojedyncze glass */
   .bottom{position:fixed;left:16px;right:16px;bottom:max(16px,env(safe-area-inset-bottom));display:flex;gap:14px;z-index:30}
   .tile{flex:1;height:72px;border-radius:18px;display:flex;align-items:center;justify-content:center;gap:10px;
     background:var(--glass-bg);border:1px solid var(--glass-bd);backdrop-filter:blur(10px);font-weight:700;color:#fff}
   .tile.active{background:rgba(20,28,38,.46);outline:2px solid rgba(64,171,255,.55)}
-  /* miganie kategorii */
   @keyframes blink{0%,100%{opacity:1}50%{opacity:.35}}
   .tile.blink{animation:blink .9s linear 6}
 
@@ -51,9 +64,8 @@
   .summary h2{margin:0 0 10px;font-size:18px}
   .summary ul{list-style:none;margin:0;padding:0}
   .summary li{margin:6px 0;display:flex;gap:8px;align-items:center}
-  .hint{margin:6px 16px;color:#cbd6e6;font-size:13px;opacity:.9}
 
-  /* glow dla SVG (aplikowane do #mic, #icon-food/#icon-taxi/#icon-hotel jeśli istnieją) */
+  /* SVG efekty (opcjonalne ID w logo) */
   .svg-glow{filter:drop-shadow(0 0 10px rgba(255,122,0,.8)) drop-shadow(0 0 20px rgba(255,122,0,.6))}
   .svg-blink{animation:blink .9s linear infinite}
 </style>
@@ -73,16 +85,23 @@
     <h1>Złóż zamówienie</h1>
     <p class="lead">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</p>
 
-    <!-- logo jako SVG (żeby móc modyfikować elementy w środku) -->
     <section class="hero">
       <div class="logo-wrap">
+        <!-- jeśli w SVG dodasz id="mic", id="icon-food", id="icon-taxi", id="icon-hotel" – skrypt je podświetli -->
         <object id="ffLogo" type="image/svg+xml" data="assets/freeflow-logo.svg" aria-label="FreeFlow logo"></object>
       </div>
     </section>
-    <p class="hint" id="sttHint" style="display:none;">🎤 Rozpoznawanie mowy nie jest wspierane w tej przeglądarce.</p>
   </main>
 
+  <!-- Pływający mikrofon -->
+  <button id="micFab" class="mic-fab" aria-label="Nagraj">🎙️</button>
+
   <div id="transcript">Słucham…</div>
+
+  <section id="summaryBox" class="summary" style="display:none;">
+    <h2>Podsumowanie</h2>
+    <ul id="summaryList"></ul>
+  </section>
 
   <nav class="bottom">
     <button id="btn-food"  class="tile">🍽️ Jedzenie</button>
@@ -90,24 +109,19 @@
     <button id="btn-hotel" class="tile">🏡 Hotel</button>
   </nav>
 
-  <section id="summaryBox" class="summary" style="display:none;">
-    <h2>Podsumowanie</h2>
-    <ul id="summaryList"></ul>
-  </section>
-
 <script>
-/* ===== helpers UI ===== */
+/* ---------- UI refs ---------- */
 const $t = document.getElementById('transcript');
 const $sumBox = document.getElementById('summaryBox');
 const $sumList = document.getElementById('summaryList');
-const $hint = document.getElementById('sttHint');
+const micFab = document.getElementById('micFab');
 const tiles = {
   food:  document.getElementById('btn-food'),
   taxi:  document.getElementById('btn-taxi'),
   hotel: document.getElementById('btn-hotel'),
 };
 
-/* ===== dostęp do elementów w SVG (po załadowaniu) ===== */
+/* ---------- SVG access ---------- */
 let svgDoc=null, svgMic=null, svgFood=null, svgTaxi=null, svgHotel=null;
 const logoObj = document.getElementById('ffLogo');
 logoObj.addEventListener('load', () => {
@@ -119,24 +133,19 @@ logoObj.addEventListener('load', () => {
   svgHotel = svgDoc.getElementById('icon-hotel');
 });
 
-/* ===== STT ===== */
+/* ---------- STT ---------- */
 let recognition=null, isListening=false;
-function sttSupported(){
-  return ('webkitSpeechRecognition' in window) || ('SpeechRecognition' in window);
-}
+function sttSupported(){ return ('webkitSpeechRecognition' in window) || ('SpeechRecognition' in window); }
 function initSTT(){
   if(recognition) return;
   const Ctor = window.webkitSpeechRecognition || window.SpeechRecognition;
-  if(!Ctor){ $hint.style.display='block'; return; }
+  if(!Ctor){ return; }
   recognition = new Ctor();
   recognition.lang='pl-PL'; recognition.continuous=true; recognition.interimResults=true;
 
   let finalText='';
   recognition.onstart=()=>{
-    isListening=true;
-    addMicGlow(true);
-    setTranscript('Słucham…');
-    finalText='';
+    isListening=true; micFab.classList.add('on'); addMicGlow(true); setTranscript('Słucham…'); finalText='';
   };
   recognition.onresult=(e)=>{
     let interim='';
@@ -148,26 +157,29 @@ function initSTT(){
     const text = cleanTranscript((finalText+interim).trim());
     setTranscript(text);
   };
-  recognition.onerror=(e)=>{ console.warn('STT error',e); stopSTT(); };
-  recognition.onend=()=>{ isListening=false; addMicGlow(false); if(!$t.textContent.trim()) setTranscript('Powiedz, co chcesz zamówić…'); parseAndSummarize($t.textContent); };
+  recognition.onerror=()=>{ stopSTT(); };
+  recognition.onend=()=>{ isListening=false; micFab.classList.remove('on'); addMicGlow(false); parseAndSummarize($t.textContent); };
 }
 function startSTT(){ if(!recognition) initSTT(); try{ recognition && recognition.start(); }catch(_){} }
 function stopSTT(){ try{ recognition && recognition.stop(); }catch(_){} }
+function toggleSTT(){ isListening ? stopSTT() : startSTT(); }
 function setTranscript(s){ $t.textContent=s; }
-
-/* odszumianie duplikatów: "pierogi pierogi pierogi" -> "pierogi"  */
 function cleanTranscript(s){
   return s
     .replace(/\s+/g,' ')
-    .replace(/\b(\w{2,})(?:\s+\1){1,}\b/gi,'$1'); // usuń powtórzone słowa
+    .replace(/\b(\w{2,})(?:\s+\1){1,}\b/gi,'$1'); // usuń powtórzenia słów
 }
 
-/* ===== intent parser (proste reguły) ===== */
+/* klik w logo i w FAB */
+logoObj.addEventListener('click', toggleSTT);
+micFab.addEventListener('click', toggleSTT);
+
+/* ---------- Intent parser ---------- */
 const catLex = {
   taxi:  ['taxi','taksów','przejazd','dojazd','kurs'],
   hotel: ['hotel','nocleg','pokój','rezerw']
 };
-const places = ['Katowic','Krakow','Kraków','Warszaw','Gdyn','Gdańsk','Pozna','Wrocław','Sopot']; // demo
+const places = ['Katowice','Kraków','Krakow','Warszawa','Warszawy','Gdynia','Gdańsk','Poznań','Wrocław','Sopot']; // demo
 const foodHints = ['pizza','pierogi','burger','sushi','makaron','sałat','zupa','kebab','ramen'];
 
 function detectCategory(text){
@@ -183,15 +195,18 @@ function extractTime(text){
   return `${hh}:${mm}`;
 }
 function extractPlace(text){
-  for(const p of places){ const re=new RegExp(p,'i'); if(re.test(text)) return p.replace(/.$/,''); }
-  // prosty fallback po przyimkach
+  // 1) słownik – zwróć pełne dopasowanie (bez obcinania końcówki)
+  for(const p of places){
+    const re = new RegExp(p,'i'); const m = text.match(re);
+    if(m) return m[0];
+  }
+  // 2) fallback po przyimkach, całe wyrażenie z wielkich liter
   const m = text.match(/\b(?:do|na|w)\s+([A-ZŁŚŻŹĆÓ][\p{L}\-]+(?:\s+[A-ZŁŚŻŹĆÓ][\p{L}\-]+)*)/u);
   return m? m[1] : null;
 }
 function extractFood(text){
   const t=text.toLowerCase();
   for(const f of foodHints) if(t.includes(f)) return f;
-  // fallback – pierwsze 2-3 słowa bez przyimków
   const stop = ['na','do','w','o','i','oraz','dla','poproszę','proszę'];
   const words = t.split(/\s+/).filter(w=>!stop.includes(w) && w.length>2);
   return words.slice(0,3).join(' ') || null;
@@ -226,7 +241,7 @@ function parseAndSummarize(text){
   showSummary(items);
 }
 
-/* ===== podsumowanie + TTS ===== */
+/* ---------- summary + TTS ---------- */
 function showSummary(items){
   $sumList.innerHTML='';
   items.forEach(i=>{ const li=document.createElement('li'); li.innerHTML=`${i.icon} ${i.text}`; $sumList.appendChild(li); });
@@ -240,10 +255,10 @@ function speak(text){
     const u=new SpeechSynthesisUtterance(text); u.lang='pl-PL';
     const use=()=>{ const v=speechSynthesis.getVoices().find(v=>v.lang?.toLowerCase().startsWith('pl')); if(v) u.voice=v; speechSynthesis.speak(u); };
     if(speechSynthesis.getVoices().length) use(); else speechSynthesis.onvoiceschanged=use;
-  }catch(e){console.warn(e)}
+  }catch(e){}
 }
 
-/* ===== UI: miganie kafelka + SVG ===== */
+/* ---------- UI helpers ---------- */
 function blinkTile(cat){
   Object.values(tiles).forEach(el=>el.classList.remove('blink','active'));
   const el = tiles[cat]; if(!el) return;
@@ -263,19 +278,11 @@ function svgBlinkCategory(cat){
   setTimeout(()=>node.classList.remove('svg-blink'), 3000);
 }
 
-/* ===== klik w logo: start/stop ===== */
-logoObj.addEventListener('click', ()=>{
-  if(!sttSupported()){ $hint.style.display='block'; addMicGlow(!isListening); return; }
-  if(isListening) stopSTT(); else startSTT();
-});
-
-/* ===== kafelki – manualne demo ===== */
-tiles.food.onclick  = ()=>parseAndSummarize('zamów jedzenie pizza na 19:00 do Katowic');
-tiles.taxi.onclick  = ()=>parseAndSummarize('taxi do Warszawy na 18:30');
-tiles.hotel.onclick = ()=>parseAndSummarize('hotel w Krakowie na 20');
-
 /* init */
-if(!sttSupported()) $hint.style.display='block';
+if(!sttSupported()){
+  // przy braku wsparcia – przycisk nadal działa wizualnie, ale nie startuje STT
+  micFab.title='Rozpoznawanie mowy niewspierane w tej przeglądarce';
+}
 </script>
 </body>
 </html>
