--- a/index.html
+++ b/index.html
@@ -6,66 +6,65 @@
 <title>FreeFlow — zamów głosem</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <style>
-  :root{
-    --fg:#e9eef6; --muted:#a8b3c7; --brand:#ff7a00;
-    --glass-bg: rgba(0,0,0,.36); --glass-bd: rgba(255,255,255,.08);
-  }
+  :root{ --fg:#e9eef6; --muted:#a8b3c7; --brand:#ff7a00; --glass:rgba(0,0,0,.36); --gbd:rgba(255,255,255,.08); }
   *{box-sizing:border-box}
-  body{
-    margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;color:var(--fg);
-    background:#0b0f14 url("assets/Background.png") center/cover fixed no-repeat;
-  }
+  body{ margin:0; font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif; color:var(--fg);
+        background:#0b0f14 url("assets/Background.png") center/cover fixed no-repeat; }
+
   .hdr{display:flex;gap:12px;align-items:center;padding:16px;background:linear-gradient(180deg,rgba(0,0,0,.55),rgba(0,0,0,0))}
-  .brand{font-size:28px;font-weight:800}
-  .brand em{color:var(--brand);font-style:normal}
-  .muted{color:var(--muted);font-size:13px}
-  .spacer{flex:1}
-  .btn-ico{height:44px;width:44px;border-radius:14px;display:grid;place-items:center;background:var(--glass-bg);border:1px solid var(--glass-bd);backdrop-filter:blur(8px)}
+  .brand{font-size:28px;font-weight:800}.brand em{color:var(--brand);font-style:normal}
+  .muted{color:var(--muted);font-size:13px}.spacer{flex:1}
+  .btn-ico{height:44px;width:44px;border-radius:14px;display:grid;place-items:center;background:var(--glass);border:1px solid var(--gbd);backdrop-filter:blur(8px)}
   h1{margin:6px 16px 6px;font-size:34px}
   .lead{margin:0 16px 2px;color:#c9d3e3}
 
-  /* HERO – większe logo, bez ucięć */
+  /* HERO */
   .hero{display:grid;place-items:center;margin:4px 0 0}
-  .logo-wrap{
-    width:min(92vw,600px);
-    max-height:52vh;                /* kontrola wysokości */
-    aspect-ratio:1/1;
-  }
+  .logo-wrap{position:relative;width:min(92vw,600px);max-height:52vh;aspect-ratio:1/1}
   .logo-wrap object{width:100%;height:100%;display:block}
+  .logo-hit{position:absolute;inset:0;border:0;background:transparent;cursor:pointer}
 
   /* MIC FAB */
   .mic-fab{
-    position:fixed; right:18px; bottom:calc(126px + env(safe-area-inset-bottom));
+    position:fixed; right:18px; bottom:calc(140px + env(safe-area-inset-bottom));
     width:56px;height:56px;border-radius:50%;
-    display:grid;place-items:center;font-size:24px;cursor:pointer;z-index:50;
-    background:var(--glass-bg);border:1px solid var(--glass-bd);backdrop-filter:blur(10px);
+    display:grid;place-items:center;font-size:24px;cursor:pointer;z-index:60;
+    background:var(--glass);border:1px solid var(--gbd);backdrop-filter:blur(10px)
   }
   @keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.08)}100%{transform:scale(1)}}
   .mic-fab.on{animation:pulse 1.1s ease-in-out infinite;box-shadow:0 0 22px rgba(255,122,0,.55)}
 
-  /* TRANSKRYPCJA wyżej */
+  /* TRANSKRYPCJA */
   #transcript{
-    position:fixed;left:16px;right:16px;
+    position:fixed;left:16px;right:16px;z-index:40;
     bottom:calc(120px + max(16px, env(safe-area-inset-bottom)));
-    z-index:40;padding:14px 16px;min-height:48px;font-size:16px;
-    background:var(--glass-bg);border:1px solid var(--glass-bd);border-radius:16px;backdrop-filter:blur(8px)
+    padding:14px 16px;min-height:48px;font-size:16px;
+    background:var(--glass);border:1px solid var(--gbd);border-radius:16px;backdrop-filter:blur(8px)
   }
 
-  /* Kafelki na dole – pojedyncze glass */
+  /* TOAST (podsumowanie) */
+  .toast{
+    position:fixed;left:16px;right:16px;z-index:50;
+    bottom:calc(200px + max(16px, env(safe-area-inset-bottom))); /* nad transkrypcją */
+    background:var(--glass);border:1px solid var(--gbd);border-radius:16px;backdrop-filter:blur(10px);
+    padding:14px 16px; transform:translateY(18px); opacity:0; pointer-events:none;
+    transition:.28s ease;
+  }
+  .toast.show{transform:none;opacity:1;pointer-events:auto}
+  .toast h2{margin:0 0 8px;font-size:18px}
+  .toast ul{list-style:none;margin:0;padding:0}
+  .toast li{margin:6px 0;display:flex;gap:8px;align-items:center}
+  .toast .x{position:absolute;right:10px;top:8px;border:0;background:transparent;color:#fff;font-size:22px;cursor:pointer}
+
+  /* Kafelki */
   .bottom{position:fixed;left:16px;right:16px;bottom:max(16px,env(safe-area-inset-bottom));display:flex;gap:14px;z-index:30}
   .tile{flex:1;height:72px;border-radius:18px;display:flex;align-items:center;justify-content:center;gap:10px;
-    background:var(--glass-bg);border:1px solid var(--glass-bd);backdrop-filter:blur(10px);font-weight:700;color:#fff}
+    background:var(--glass);border:1px solid var(--gbd);backdrop-filter:blur(10px);font-weight:700;color:#fff}
   .tile.active{background:rgba(20,28,38,.46);outline:2px solid rgba(64,171,255,.55)}
   @keyframes blink{0%,100%{opacity:1}50%{opacity:.35}}
   .tile.blink{animation:blink .9s linear 6}
 
-  /* Podsumowanie */
-  .summary{margin:12px 16px 120px;padding:16px;background:var(--glass-bg);border:1px solid var(--glass-bd);border-radius:16px;backdrop-filter:blur(8px)}
-  .summary h2{margin:0 0 10px;font-size:18px}
-  .summary ul{list-style:none;margin:0;padding:0}
-  .summary li{margin:6px 0;display:flex;gap:8px;align-items:center}
-
-  /* SVG efekty (opcjonalne ID w logo) */
+  /* SVG efekty */
   .svg-glow{filter:drop-shadow(0 0 10px rgba(255,122,0,.8)) drop-shadow(0 0 20px rgba(255,122,0,.6))}
   .svg-blink{animation:blink .9s linear infinite}
 </style>
@@ -87,20 +86,20 @@
 
     <section class="hero">
       <div class="logo-wrap">
-        <!-- jeśli w SVG dodasz id="mic", id="icon-food", id="icon-taxi", id="icon-hotel" – skrypt je podświetli -->
         <object id="ffLogo" type="image/svg+xml" data="assets/freeflow-logo.svg" aria-label="FreeFlow logo"></object>
+        <button id="logoHit" class="logo-hit" aria-label="Nagraj / zatrzymaj"></button>
       </div>
     </section>
   </main>
 
-  <!-- Pływający mikrofon -->
   <button id="micFab" class="mic-fab" aria-label="Nagraj">🎙️</button>
 
   <div id="transcript">Słucham…</div>
 
-  <section id="summaryBox" class="summary" style="display:none;">
+  <section id="toast" class="toast" aria-live="polite">
+    <button class="x" title="Zamknij" aria-label="Zamknij">×</button>
     <h2>Podsumowanie</h2>
-    <ul id="summaryList"></ul>
+    <ul id="sumList"></ul>
   </section>
 
   <nav class="bottom">
@@ -110,22 +109,23 @@
   </nav>
 
 <script>
-/* ---------- UI refs ---------- */
+/* ---------- refs ---------- */
 const $t = document.getElementById('transcript');
-const $sumBox = document.getElementById('summaryBox');
-const $sumList = document.getElementById('summaryList');
 const micFab = document.getElementById('micFab');
+const logoHit = document.getElementById('logoHit');
+const toast = document.getElementById('toast');
+const toastClose = toast.querySelector('.x');
+const sumList = document.getElementById('sumList');
 const tiles = {
   food:  document.getElementById('btn-food'),
   taxi:  document.getElementById('btn-taxi'),
   hotel: document.getElementById('btn-hotel'),
 };
 
-/* ---------- SVG access ---------- */
+/* ---------- SVG handles ---------- */
 let svgDoc=null, svgMic=null, svgFood=null, svgTaxi=null, svgHotel=null;
-const logoObj = document.getElementById('ffLogo');
-logoObj.addEventListener('load', () => {
-  svgDoc = logoObj.contentDocument;
+document.getElementById('ffLogo').addEventListener('load', e=>{
+  svgDoc = e.target.contentDocument;
   if(!svgDoc) return;
   svgMic   = svgDoc.getElementById('mic');
   svgFood  = svgDoc.getElementById('icon-food');
@@ -134,19 +134,17 @@ logoObj.addEventListener('load', () => {
 });
 
 /* ---------- STT ---------- */
-let recognition=null, isListening=false;
-function sttSupported(){ return ('webkitSpeechRecognition' in window) || ('SpeechRecognition' in window); }
+let recognition=null, isListening=false, hideTimer=null;
+function sttSupported(){ return ('webkitSpeechRecognition' in window)||('SpeechRecognition' in window); }
 function initSTT(){
   if(recognition) return;
   const Ctor = window.webkitSpeechRecognition || window.SpeechRecognition;
-  if(!Ctor){ return; }
+  if(!Ctor) return;
   recognition = new Ctor();
   recognition.lang='pl-PL'; recognition.continuous=true; recognition.interimResults=true;
 
   let finalText='';
-  recognition.onstart=()=>{
-    isListening=true; micFab.classList.add('on'); addMicGlow(true); setTranscript('Słucham…'); finalText='';
-  };
+  recognition.onstart=()=>{ isListening=true; micFab.classList.add('on'); addMicGlow(true); setTxt('Słucham…'); finalText=''; };
   recognition.onresult=(e)=>{
     let interim='';
     for(let i=e.resultIndex;i<e.results.length;i++){
@@ -154,100 +152,91 @@ function initSTT(){
       if(r.isFinal) finalText += r[0].transcript+' ';
       else interim += r[0].transcript;
     }
-    const text = cleanTranscript((finalText+interim).trim());
-    setTranscript(text);
+    const text = clean((finalText+interim).trim());
+    setTxt(text);
   };
-  recognition.onerror=()=>{ stopSTT(); };
-  recognition.onend=()=>{ isListening=false; micFab.classList.remove('on'); addMicGlow(false); parseAndSummarize($t.textContent); };
+  recognition.onerror=()=> stopSTT();
+  recognition.onend=()=>{ isListening=false; micFab.classList.remove('on'); addMicGlow(false); summarize($t.textContent); };
 }
-function startSTT(){ if(!recognition) initSTT(); try{ recognition && recognition.start(); }catch(_){} }
-function stopSTT(){ try{ recognition && recognition.stop(); }catch(_){} }
-function toggleSTT(){ isListening ? stopSTT() : startSTT(); }
-function setTranscript(s){ $t.textContent=s; }
-function cleanTranscript(s){
-  return s
-    .replace(/\s+/g,' ')
-    .replace(/\b(\w{2,})(?:\s+\1){1,}\b/gi,'$1'); // usuń powtórzenia słów
+function startSTT(){ if(!recognition) initSTT(); try{recognition&&recognition.start()}catch{} }
+function stopSTT(){ try{recognition&&recognition.stop()}catch{} }
+function toggleSTT(){ isListening?stopSTT():startSTT(); }
+
+micFab.onclick = toggleSTT;
+logoHit.onclick = toggleSTT;
+
+function setTxt(s){ $t.textContent=s; }
+function clean(s){
+  // popraw ; → :
+  s = s.replace(/(\d{1,2})\s*;\s*(\d{2})/g,'$1:$2');
+  // usuń powtarzanie całego zdania 2–3x
+  const parts = s.split(/\s+/);
+  s = parts.join(' ');
+  return s.replace(/\s+/g,' ');
 }
 
-/* klik w logo i w FAB */
-logoObj.addEventListener('click', toggleSTT);
-micFab.addEventListener('click', toggleSTT);
+/* ---------- Parser ---------- */
+const catLex={ taxi:['taxi','taksów','przejazd','dojazd','kurs'], hotel:['hotel','nocleg','pokój','rezerw'] };
+const places=['Katowice','Kraków','Krakow','Warszawa','Gdynia','Gdańsk','Poznań','Wrocław','Sopot'];
+const foodHints=['pizza','pepperoni','pierogi','burger','sushi','makaron','sałat','zupa','kebab','ramen'];
 
-/* ---------- Intent parser ---------- */
-const catLex = {
-  taxi:  ['taxi','taksów','przejazd','dojazd','kurs'],
-  hotel: ['hotel','nocleg','pokój','rezerw']
-};
-const places = ['Katowice','Kraków','Krakow','Warszawa','Warszawy','Gdynia','Gdańsk','Poznań','Wrocław','Sopot']; // demo
-const foodHints = ['pizza','pierogi','burger','sushi','makaron','sałat','zupa','kebab','ramen'];
-
-function detectCategory(text){
-  const t=text.toLowerCase();
-  if(catLex.taxi.some(w=>t.includes(w)))  return 'taxi';
-  if(catLex.hotel.some(w=>t.includes(w))) return 'hotel';
-  return 'food';
+function category(t){ t=t.toLowerCase(); if(catLex.taxi.some(w=>t.includes(w)))return 'taxi'; if(catLex.hotel.some(w=>t.includes(w)))return 'hotel'; return 'food'; }
+function timeOf(t){ t=t.replace(/;/g,':'); const m=t.match(/(?:na|o)\s*(\d{1,2})(?::(\d{2}))?/i); if(!m) return null; return `${m[1].padStart(2,'0')}:${(m[2]||'00')}`; }
+function placeOf(t){
+  for(const p of places){ const m=t.match(new RegExp(p,'i')); if(m) return m[0]; }
+  const m=t.match(/\b(?:do|na|w)\s+([A-ZŁŚŻŹĆÓ][\p{L}\-]+(?:\s+[A-ZŁŚŻŹĆÓ][\p{L}\-]+)*)/u);
+  return m?m[1]:null;
 }
-function extractTime(text){
-  const m = text.match(/(?:na|o)\s+(\d{1,2})(?::(\d{2}))?/i);
-  if(!m) return null;
-  const hh = m[1].padStart(2,'0'); const mm = m[2]||'00';
-  return `${hh}:${mm}`;
-}
-function extractPlace(text){
-  // 1) słownik – zwróć pełne dopasowanie (bez obcinania końcówki)
-  for(const p of places){
-    const re = new RegExp(p,'i'); const m = text.match(re);
-    if(m) return m[0];
-  }
-  // 2) fallback po przyimkach, całe wyrażenie z wielkich liter
-  const m = text.match(/\b(?:do|na|w)\s+([A-ZŁŚŻŹĆÓ][\p{L}\-]+(?:\s+[A-ZŁŚŻŹĆÓ][\p{L}\-]+)*)/u);
-  return m? m[1] : null;
-}
-function extractFood(text){
-  const t=text.toLowerCase();
-  for(const f of foodHints) if(t.includes(f)) return f;
-  const stop = ['na','do','w','o','i','oraz','dla','poproszę','proszę'];
-  const words = t.split(/\s+/).filter(w=>!stop.includes(w) && w.length>2);
-  return words.slice(0,3).join(' ') || null;
+function dishOf(t){
+  t=t.toLowerCase();
+  t = t.replace(/\d{1,2}:\d{2}/g,' ').replace(/\d+/g,' '); // wyrzuć czasy/numery
+  for(const f of foodHints){ if(t.includes(f)) return f; }
+  const stop=['na','do','w','o','i','oraz','dla','poproszę','proszę','zamów','chcę'];
+  let words = t.split(/\s+/).filter(w=>w && !stop.includes(w) && w.length>2);
+  // dedup sekwencyjny
+  words = words.filter((w,i,a)=> i===0 || w!==a[i-1]);
+  return words.slice(0,3).join(' ')||null;
 }
 
-function parseAndSummarize(text){
+function summarize(text){
   if(!text || text.length<2) return;
-  const cat = detectCategory(text);
-  const time = extractTime(text);
-  const place = extractPlace(text);
-  const dish = (cat==='food')? extractFood(text) : null;
+  const cat = category(text);
+  const time = timeOf(text);
+  const place= placeOf(text);
+  const dish = (cat==='food')? dishOf(text) : null;
 
-  blinkTile(cat);
-  svgBlinkCategory(cat);
+  blinkTile(cat); svgBlink(cat);
 
   const items=[];
   items.push({icon:'✅',text:'Status: gotowe'});
   if(cat==='food'){
     items.push({icon:'🍽️',text:`Danie: ${dish||'—'}`});
-    if(time)  items.push({icon:'⏱',text:`Czas: ${time}`});
-    if(place) items.push({icon:'📍',text:`Miejsce: ${place}`});
+    if(time) items.push({icon:'⏱',text:`Czas: ${time}`});
+    if(place)items.push({icon:'📍',text:`Miejsce: ${place}`});
     items.push({icon:'💲',text:'Cena: demo'});
   }else if(cat==='taxi'){
-    if(place) items.push({icon:'📍',text:`Kierunek: ${place}`});
-    if(time)  items.push({icon:'⏱',text:`Godzina: ${time}`});
+    if(place)items.push({icon:'📍',text:`Kierunek: ${place}`});
+    if(time) items.push({icon:'⏱',text:`Godzina: ${time}`});
     items.push({icon:'🚕',text:'Taxi zamówione (demo)'});
   }else{
-    if(place) items.push({icon:'📍',text:`Miasto: ${place}`});
-    if(time)  items.push({icon:'⏱',text:`Godzina: ${time}`});
+    if(place)items.push({icon:'📍',text:`Miasto: ${place}`});
+    if(time) items.push({icon:'⏱',text:`Godzina: ${time}`});
     items.push({icon:'🏨',text:'Hotel – rezerwacja demo'});
   }
-  showSummary(items);
+  showToast(items);
 }
 
-/* ---------- summary + TTS ---------- */
-function showSummary(items){
-  $sumList.innerHTML='';
-  items.forEach(i=>{ const li=document.createElement('li'); li.innerHTML=`${i.icon} ${i.text}`; $sumList.appendChild(li); });
-  $sumBox.style.display='block';
+/* ---------- toast + TTS ---------- */
+function showToast(items){
+  sumList.innerHTML='';
+  items.forEach(i=>{ const li=document.createElement('li'); li.innerHTML=`${i.icon} ${i.text}`; sumList.appendChild(li); });
+  toast.classList.add('show');
   speak('Podsumowanie. ' + items.map(i=>i.text).join('. ') + '.');
+  clearTimeout(hideTimer);
+  hideTimer = setTimeout(()=> toast.classList.remove('show'), 6000);
 }
+toastClose.onclick = ()=>{ toast.classList.remove('show'); clearTimeout(hideTimer); };
+
 function speak(text){
   try{
     if(!('speechSynthesis' in window)) return;
@@ -265,24 +254,14 @@ function blinkTile(cat){
   el.classList.add('active','blink');
   setTimeout(()=>el.classList.remove('blink'), 5000);
 }
-function addMicGlow(on){
-  if(svgMic){
-    if(on){ svgMic.classList.add('svg-glow'); }
-    else  { svgMic.classList.remove('svg-glow'); }
-  }
-}
-function svgBlinkCategory(cat){
+function addMicGlow(on){ if(svgMic){ svgMic.classList.toggle('svg-glow', on); } }
+function svgBlink(cat){
   const map={food:svgFood,taxi:svgTaxi,hotel:svgHotel};
-  const node = map[cat]; if(!node) return;
-  node.classList.add('svg-blink');
-  setTimeout(()=>node.classList.remove('svg-blink'), 3000);
+  const node = map[cat]; if(!node) return; node.classList.add('svg-blink'); setTimeout(()=>node.classList.remove('svg-blink'),3000);
 }
 
 /* init */
-if(!sttSupported()){
-  // przy braku wsparcia – przycisk nadal działa wizualnie, ale nie startuje STT
-  micFab.title='Rozpoznawanie mowy niewspierane w tej przeglądarce';
-}
+if(!sttSupported()){ micFab.title='Rozpoznawanie mowy niewspierane w tej przeglądarce'; }
 </script>
 </body>
 </html>
